Adding h2 tags to my pricing index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="nav unit xs-1 m-1-2 l-3-4" tabindex="0">
       <nav class="2" id="nav" tabindex="0" role="navigation">
         <ol class="mega list-group-inline push-0">
-          <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="tour.html">About</a></li>
@@ -34,7 +34,6 @@
       </nav>
     </div>
   </header>
-
   <main role="main" id="main" class="grid grid-stretch" tabindex="0">
     <div class="unit xs-1 s-1 m-1-2">
       <div class="banner embed embed-16by9">
