--- a/sign-up.html
+++ b/sign-up.html
@@ -44,7 +44,7 @@
         <p class="mega">Please select one of our plans that is budget friendly and offers 24/7 support to its users.</p>
       </div>
 
-      <form class="push-0" method="POST">
+      <form class="push-0" method="POST" action="https://formspree.io/">
         <fieldset>
           <legend>Personal details</legend>
           <div class="grid">
