--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,400i" rel="stylesheet">
 </head>
 <body>
-  <ul>
+  <ul class="skip-links">
     <li><a href="#main">Jump to main content</a></li>
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
@@ -33,13 +33,13 @@
     </div>
   </header>
 
-  <main class="background">
+  <main role="main" id="main" class="background" tabindex="0">
     <div class="grid island">
-      <section  class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+      <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
         <div>
           <div>
             <div class="box-1-2">
-              <p class="gutter pad-b-1-2">Basic</p>
+              <h2 class="gutter pad-b-1-2">Basic</h2>
             </div>
             <div class="plans">
 
@@ -77,7 +77,7 @@
       <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
         <div>
           <div class="box-1-2">
-            <p class="gutter pad-b-1-2">Xtra</p>
+            <h2 class="gutter pad-b-1-2">Xtra</h2>
           </div>
           <div class="plans">
 
@@ -113,7 +113,7 @@
       <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
         <div>
           <div class="box-1-2">
-            <p class="gutter pad-b-1-2">Premium</p>
+            <h2 class="gutter pad-b-1-2">Premium</h2>
           </div>
           <div class="plans">
 
@@ -123,7 +123,6 @@
               </div>
               <div class="unit xs-1 s-1 m-1-3 l-1-3">
                 <svg>
-
                 </svg>
               </div>
             </div>
@@ -138,29 +137,28 @@
               <li>Custom emails</li>
               <li>Cloaud recording</li>
               <li>24/7 support anywhere</li>
-
             </ol>
             <div class="push text-center">
               <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
             </div>
             <div class="box">
-
             </div>
           </div>
         </div>
       </section>
-    </main>
-    <footer role="contentinfo">
-      <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
-      </ul>
-    </footer>
-  </body>
-  </html>
+    </div>
+  </main>
+  <footer role="contentinfo">
+    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+    </ul>
+  </footer>
+</body>
+</html>
