Fix the support page

--- a/sign-up.html
+++ b/sign-up.html
@@ -43,7 +43,9 @@
         <h2>Want to stay connected with your business?</h2>
         <p class="mega">Please select one of our plans that is budget friendly and offers 24/7 support to its users.</p>
       </div>
-
+      <div>
+        <a href="tour.html">Learn more about us</a>
+      </div>
       <form class="push-0" method="POST" action="https://formspree.io/">
         <fieldset>
           <legend>Personal details</legend>
