--- a/support.html
+++ b/support.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <ul>
+  <ul class="skip-links">
     <li><a href="#main">Jump to main content</a></li>
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
@@ -39,22 +39,17 @@
     <section class="grid text-center island">
       <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
         <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Basic</p>
+          <h2 class="support-type gutter pad-t-1-2 pad-b-1-2">Basic Support</h2>
         </div>
         <div class="plans">
           <div class="support embed embed-1by1">
             <img class="embed-item" src="images/supportimage.jpg" alt="">
           </div>
           <ol class="list-group gutter-2 text-left">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
+            <li>Having trouble connecting to our server?</li>
+            <li>Try these simple troubleshooting steps</li>
+            <li>Check wifi connection</li>
+            <li>Check phone line</li>
           </ol>
 
           <div class="box">
@@ -64,22 +59,17 @@
       </div>
       <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
         <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Basic</p>
+          <h2 class="support-type gutter pad-t-1-2 pad-b-1-2">Xtra Support</h2>
         </div>
         <div class="plans">
           <div class="support embed embed-1by1">
             <img class="embed-item" src="images/supportimage.jpg" alt="">
           </div>
-          <ol class="list-group gutter">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
+          <ol class="list-group gutter-2 text-left">
+            <li>Still having trouble with connecting?</li>
+            <li>Please call us</li>
+            <li>1-888-123-4567</li>
+            <li>We are here to help with our 24/7 service</li>
           </ol>
 
           <div class="box">
