--- a/tour.html
+++ b/tour.html
@@ -38,14 +38,14 @@
       <div class="wrapper island">
 
         <div class="box-1-2">
-          <p class="about-us gutter pad-b-1-2">About Us</p>
+          <h2 class="about-us gutter pad-b-1-2">About Us</h2>
         </div>
         <div class="plans">
 
           <div class="grid">
 
-            <div class="banner unit xs-1 s-1 m-1-2">
-              <img class="img-flex" src="images/placeholder-16by9.svg" alt="aria-details">
+            <div class="tour embed embed-1by1 about-us unit xs-1 s-1 m-1-2">
+              <img class="embed-item" src="images/tourimage.jpg" alt="aria-details">
             </div>
 
             <div class="banner-content pad-t-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
@@ -63,7 +63,8 @@
     </section>
     <div class="table-wrapper scrollable">
       <table class="push 0">
-        <caption class="mega text-center">This is what makes us the best in the industry!</caption>
+        <caption class="mega text-center">This is what makes us the best in the industry!<br><a class="text-center" href="pricing.html">Find out more!</a></caption>
+
         <thead>
           <tr>
             <th class="name" scope="col">Plan</th>
