--- a/pricing.html
+++ b/pricing.html
@@ -45,12 +45,9 @@
 
               <div class="grid">
                 <div class="pricing embed embed-1by1 unit xs-1 s-1 m-2-3 l-2-3">
-                  <img class="embed-item" src="images/pricingimage.jpg" alt="">
+                  <img class="embed-item" src="images/pricingimage.jpg" alt="aria-details">
                 </div>
                 <div class="unit xs-1 s-1 m-1-3 l-1-3">
-                  <svg>
-
-                  </svg>
                 </div>
               </div>
               <ol class="list-group gutter">
@@ -83,12 +80,9 @@
 
             <div class="grid">
               <div class="pricing embed embed-1by1 unit xs-1 s-1 m-2-3 l-2-3">
-                <img class="embed-item" src="images/pricingimage.jpg" alt="">
+                <img class="embed-item" src="images/pricingimage.jpg" alt="aria-details">
               </div>
               <div class="unit xs-1 s-1 m-1-3 l-1-3">
-                <svg>
-
-                </svg>
               </div>
             </div>
             <ol class="list-group gutter">
@@ -102,7 +96,7 @@
               <li>Skype for business</li>
             </ol>
             <div class="push text-center">
-              <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+              <a class="btn btn-big" href="sign-up.html">9.99/Month</a>
             </div>
             <div class="box">
 
@@ -119,11 +113,10 @@
 
             <div class="grid">
               <div class="pricing embed embed-1by1 unit xs-1 s-1 m-2-3 l-2-3">
-                <img class="embed-item" src="images/pricingimage.jpg" alt="">
+                <img class="embed-item" src="images/pricingimage.jpg" alt="aria-details">
               </div>
               <div class="unit xs-1 s-1 m-1-3 l-1-3">
-                <svg>
-                </svg>
+
               </div>
             </div>
             <ol class="list-group gutter">
@@ -139,7 +132,7 @@
               <li>24/7 support anywhere</li>
             </ol>
             <div class="push text-center">
-              <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+              <a class="btn btn-big" href="sign-up.html">19.99/Month</a>
             </div>
             <div class="box">
             </div>
