Add padding to code

--- a/pricing.html
+++ b/pricing.html
@@ -39,7 +39,7 @@
         <div>
           <div>
             <div class="box-1-2">
-              <h2 class="gutter pad-b-1-2">Basic</h2>
+              <h2 class="pricing-details gutter pad-t-1-2 pad-b-1-2">Basic</h2>
             </div>
             <div class="plans">
 
@@ -74,7 +74,7 @@
       <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
         <div>
           <div class="box-1-2">
-            <h2 class="gutter pad-b-1-2">Xtra</h2>
+            <h2 class="pricing-details gutter pad-t-1-2 pad-b-1-2">Xtra</h2>
           </div>
           <div class="plans">
 
@@ -107,7 +107,7 @@
       <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
         <div>
           <div class="box-1-2">
-            <h2 class="gutter pad-b-1-2">Premium</h2>
+            <h2 class="pricing-details gutter pad-t-1-2 pad-b-1-2">Premium</h2>
           </div>
           <div class="plans">
 
@@ -127,8 +127,7 @@
               <li>Managed domains</li>
               <li>Single sign-on</li>
               <li>Company branding</li>
-              <li>Custom emails</li>
-              <li>Cloaud recording</li>
+              <li>Cloud recording</li>
               <li>24/7 support anywhere</li>
             </ol>
             <div class="push text-center">
