Add padding again

--- a/tour.html
+++ b/tour.html
@@ -38,7 +38,7 @@
       <div class="wrapper island">
 
         <div class="box-1-2">
-          <h2 class="about-us gutter pad-b-1-2">About Us</h2>
+          <h2 class="about-us gutter pad-t-1-2 pad-b-1-2">About Us</h2>
         </div>
         <div class="plans">
 
